// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TwoFactorAuthenticationDisableModal /> should call the delete function 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              
              Foo 
              <b>
                body
              </b>
              <p
                class="mb-2 mt-3"
              >
                Enter the 6-digit verification code generated from your authenticator app.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-verificationCode"
                    placeholder="Enter 6-digit verification code from app"
                    type="text"
                  />
                </div>
              </div>
              <p
                class="mb-2 mt-3"
              >
                Enter your password.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-userPassword"
                    placeholder="Enter your password"
                    type="password"
                  />
                </div>
              </div>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-auto fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill destructive medium"
                type="button"
              >
                Foo action button text
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should call the delete function 2`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              
              Foo 
              <b>
                body
              </b>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-auto fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill destructive medium"
                type="button"
              >
                Foo action button text
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should not render the modal when not open 1`] = `
<body
  class=""
>
  <div />
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should render the modal 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              
              Foo 
              <b>
                body
              </b>
              <p
                class="mb-2 mt-3"
              >
                Enter the 6-digit verification code generated from your authenticator app.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-verificationCode"
                    placeholder="Enter 6-digit verification code from app"
                    type="text"
                  />
                </div>
              </div>
              <p
                class="mb-2 mt-3"
              >
                Enter your password.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-userPassword"
                    placeholder="Enter your password"
                    type="password"
                  />
                </div>
              </div>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-auto fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                aria-disabled="true"
                class="wrapper fill destructive medium isDisabled"
                type="button"
              >
                Foo action button text
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should render the modal 2`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              
              Foo 
              <b>
                body
              </b>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-auto fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill destructive medium"
                type="button"
              >
                Foo action button text
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should show an error if the deletion failed 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="alert error mb-3"
              >
                <div
                  class="iconContainer"
                >
                  <img
                    alt="icon"
                    src="test-file-stub"
                  />
                </div>
                <div
                  class="content"
                >
                  <span
                    class="label"
                  >
                    foo error deleteTwoFASecretMock
                  </span>
                </div>
              </div>
              Foo 
              <b>
                body
              </b>
              <p
                class="mb-2 mt-3"
              >
                Enter the 6-digit verification code generated from your authenticator app.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-verificationCode"
                    placeholder="Enter 6-digit verification code from app"
                    type="text"
                  />
                </div>
              </div>
              <p
                class="mb-2 mt-3"
              >
                Enter your password.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-userPassword"
                    placeholder="Enter your password"
                    type="password"
                  />
                </div>
              </div>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-auto fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill destructive medium"
                type="button"
              >
                Foo action button text
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should show an error if the deletion failed 2`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="alert error mb-3"
              >
                <div
                  class="iconContainer"
                >
                  <img
                    alt="icon"
                    src="test-file-stub"
                  />
                </div>
                <div
                  class="content"
                >
                  <span
                    class="label"
                  >
                    foo error deleteTwoFASecretMock
                  </span>
                </div>
              </div>
              Foo 
              <b>
                body
              </b>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-auto fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill destructive medium"
                type="button"
              >
                Foo action button text
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;
